--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="container"></div>
+        <header>
+            <h1>FizzBuzzDOM</h1>
+        </header>
+        <main>
+            <div class="container"></div>
+        </main>
         <script src="js/main.js"></script>
     </body>
 </html>
